<resources>
    <string name="app_name">I Lost</string>

    //Headings
    <string name="heading_one">Welcome To I lost!</string>
    <string name="heading_two">with I lost </string>
    <string name="heading_three">Create Your Account</string>


    //Description
    <string name="desc_one">Lets Get Started!</string>
    <string name="desc_two">You Will Be Able To Find Your lost Item Faster And Easier</string>
    <string name="desc_three">And Become Part Of Our App</string>

    //Create page
    <string name="button">Create</string>
    <string name="intro">Create Your Account</string>
    <string name="full">Full Name</string>
    <string name="mail">Email</string>
    <string name="pass">Password</string>

    //intro page
    <string name="nb">Next</string>
    <string name="bb">Back</string>
    <string name="sb">Skip</string>

    //item list page
    <string name="itemName">Item Name</string>
    <string name="itemHour">Time</string>


</resources>
