<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4"
    android:background="@drawable/background">


    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/enriqueta"
        android:shadowColor="@color/black"
        android:background="@drawable/custominput"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.824" />

    <EditText
        android:id="@+id/fullNameETXT"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:fontFamily="@font/enriqueta"
        android:hint="@string/full"
        android:drawablePadding="5dp"
        android:background="@drawable/custominput"
        android:drawableStart="@drawable/ic_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523"
        android:autofillHints="...">
    </EditText>


    <EditText
        android:id="@+id/fullNameETXT2"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:autofillHints="..."
        android:fontFamily="@font/enriqueta"
        android:hint="@string/pass"
        android:background="@drawable/custominput"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_lock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.698"></EditText>

    <EditText
        android:id="@+id/emailETXT"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:autofillHints="..."
        android:fontFamily="@font/enriqueta"
        android:hint="@string/mail"
        android:background="@drawable/custominput"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612"></EditText>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:fontFamily="@font/enriqueta"
        android:textColor="@color/white"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.257" />
</androidx.constraintlayout.widget.ConstraintLayout>